package client;

import vehicle.Vehicle;

public class LeaseManager {
    Vehicle[] leasedVehicles;
    
}
